# Runtime-Aware-QAOA-for-Constrained-J1-J2-Ising-Ground-State-Search

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RESEARCH_JOURNAL.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: runtime_trust_gate.yaml
docs/: ARCHITECTURE.md  EXECUTIVE_SUMMARY_TEMPLATE.md  HONEST_LIMITATIONS.md  LIVE_CERT_PROTOCOL.md  METHODS_AND_EVALUATION.md  PUBLICATION_READY_PAPER.md  RELEASE_CHECKLIST.md  RESULTS_PLAYBOOK.md  RUN_PROVENANCE.md  SUBMISSION_DRAFT_CHAPTER.md  SYSTEM_OVERVIEW.md  THESIS_CHAPTER_SCAFFOLD.md  execution_body_deformation.md  why_classical_still_wins.md  why_i_dont_trust_this_result.md
examples/: real_market_template.csv
results/: README.md
tests/: test_baselines.py  test_calibration_and_live_cert.py  test_cli_and_release_tools.py  test_config.py  test_decision_and_market.py  test_decision_and_spin.py  test_execution_body.py  test_live_validation.py  test_penalties_and_tracking.py  test_pipeline.py  test_problem.py  test_quantum_dicke.py  test_reporting_and_sweeps.py  test_runtime_hardening.py  test_runtime_support.py  test_session_and_checkpointing.py
tools/: analyze_calibration_drift.py  build_private_release.py  cleanup_release.py  dependency_surface.py  export_runtime_calibration.py  live_certification.py  release_check.py  run_execution_body_experiments.py  run_frustration_axis_aer_sweep.py  run_frustration_axis_sweep.py  run_live_validation.py  run_paper_study.py  run_pilot_study.py  run_scaling_audit.py  scan_plaintext_secrets.py
(+176 files in other folders)
