[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spinmesh-runtime"
version = "0.8.0"
description = "Execution-body deformation framework for constrained J1-J2 Ising QAOA."
readme = "README.md"
authors = [{name = "Hirrresh Sundrq"}]
license = {text = "MIT"}
keywords = ["qaoa", "ising-model", "j1-j2", "frustration", "spin-glass", "qiskit", "ibm-runtime", "benchmarking", "nisq", "runtime-aware"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "build>=1.2",
]
quantum = [
  "qiskit>=1.0",
  "qiskit-aer>=0.14",
]
runtime = [
  "qiskit-ibm-runtime>=0.42",
]
tracking = [
  "mlflow>=2.12",
]

[project.scripts]
ionmesh-runtime = "ionmesh_runtime.cli:main"
spinmesh-runtime = "spinmesh_runtime.cli:main"
spinmesh-qaoa = "spinmesh_runtime.cli:main"
hqp-runtime = "hybrid_qaoa_portfolio.cli:main"
hybrid-qaoa = "hybrid_qaoa_portfolio.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
